Fix alignment of select fields

--- a/css/legacy/includes/_styles.scss
+++ b/css/legacy/includes/_styles.scss
@@ -144,6 +144,7 @@
      display: none;
    }
 
+   .tab_cadre_fixe .select2-container,
    .tab_cadre_fixe .select2-container .select2-selection.select2-selection--single {
       max-width: 270px;
    }
